Working on concepts for content pages. Still need to fix z-indexing

--- a/_content.scss
+++ b/_content.scss
@@ -1,3 +1,91 @@
 header + main {
   background: $white;
 }
+
+.content-page {
+  font: {
+    family: $font-family-sans-serif;
+    size: $font-size-base;
+    weight: $font-weight-base;
+  }
+  line-height: $line-height-base;
+
+.hero{
+  overflow: hidden;
+  z-index: 10;
+  text-shadow: 0px 0px 8px rgba(20, 20, 20, 0.8);
+
+  &:before {
+    content: '';
+    z-index: 1;
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: $qnBlue;
+    opacity: 0.85;
+    mix-blend-mode: hard-light;
+  }
+
+  &__img {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    top: -10px;
+    height: auto;
+    object-fit: cover;
+    filter: grayscale(100%) blur(5px);
+    z-index: 0;
+  }
+
+  &__title {
+    z-index: 10;
+    position: sticky;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+  header {
+    text-rendering: optimizeLegibility;
+    position: relative;
+    min-height: 35vh;
+    width: 100%;
+    background: $qnBlue;
+
+    h1 {
+      z-index: 10;
+      color: $ltBlue;
+      font: {
+        family: $font-family-sans-serif;
+        size: $font-size-base*1.5;
+        weight: $font-weight-litebold;
+      }
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    h2 {
+      z-index: 10;
+      color: lighten($ltBlue, 5%);
+      font: {
+        family: $font-family-sans-serif;
+        size: $font-size-base*1.25;
+        weight: $font-weight-litebold;
+      }
+      text-align: center;
+      margin: 0 auto;
+    }
+  }
+
+  .over {margin-top: -100px;}
+
+  section.page_area {
+    background: $white;
+    .page {
+      min-height: 15vh;
+    }
+
+    .container {position: relative}    
+  }
+}
