--- a/_footer.scss
+++ b/_footer.scss
@@ -28,7 +28,7 @@
 }
 .mb-mm-35 {
   @include media(mm) {
-    margin-bottom: 35px;
+    margin-bottom: 55px;   
   }
 }
 
