--- a/_padding.scss
+++ b/_padding.scss
@@ -17,7 +17,7 @@ $break-vals: xs sm md lg xl wl;
   }
 
   // Increments the counter
-  @if $padding == 0 {
+  @if ($padding == 0) {
     $padding: $padding + 2;
   } @else {
     $padding: $padding * 2;
